--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -975,6 +975,19 @@ TODO:    > Text Icons
 ────────────────────────────
 TODO:        >> Generator
 ──────────────────────────── */
+#tt {
+  border: 1px solid red;
+}
+
+#tt::before {
+  display: inline;
+  content: '····';
+  color: rgba(255, 255, 255, 0);
+  background-image: url("../../images/icons/textIcon_template.svg");
+  background-repeat: no-repeat;
+  background-size: 21px 21px;
+}
+
 .textIcon_template, .textIcon_template_left, .textIcon_template_right {
   background-repeat: no-repeat;
   background-size: calc(21px + 0px) 21px;
@@ -986,6 +999,7 @@ TODO:        >> Generator
 
 .textIcon_template, .textIcon_template_left {
   background-image: url("../../images/icons/textIcon_template.svg");
+  background-position-y: 0px;
   padding-left: calc(21px + 0px + 0px + 4px);
 }
 
@@ -995,7 +1009,7 @@ TODO:        >> Generator
 
 .textIcon_template_right {
   background-image: url("../../images/icons/textIcon_template.svg");
-  background-position: 100% 0;
+  background-position: 100% 0px;
   padding-right: calc(21px + 0px + 0px + 4px);
 }
 
@@ -1022,6 +1036,54 @@ TODO:        >> Generator
   overflow: hidden;
 }
 
+.textIcon_HNB_template, .textIcon_HNB_template_left, .textIcon_HNB_template_right {
+  background-repeat: no-repeat;
+  background-size: calc(21px + 0px) 21px;
+}
+
+.textIcon_HNB_template::selection, .textIcon_HNB_template_left::selection, .textIcon_HNB_template_right::selection {
+  color: transparent;
+}
+
+.textIcon_HNB_template, .textIcon_HNB_template_left {
+  background-image: url("../../images/icons/textIcon_menu_template.svg");
+  background-position-y: 3px;
+  padding-left: calc(21px + 0px + 6px + 4px);
+}
+
+.textIcon_HNB_template:empty, .textIcon_HNB_template_left:empty {
+  padding-left: calc(21px + 0px);
+}
+
+.textIcon_HNB_template_right {
+  background-image: url("../../images/icons/textIcon_menu_template.svg");
+  background-position: 100% 3px;
+  padding-right: calc(21px + 0px + 6px + 4px);
+}
+
+.textIcon_HNB_template_right:empty {
+  padding-right: calc(21px + 0px);
+}
+
+.textIcon_HNB_template.noText, .textIcon_HNB_template_left.noText {
+  padding-left: calc(21px + 0px);
+}
+
+.textIcon_HNB_template_right.noText {
+  padding-right: calc(21px + 0px);
+}
+
+.textIcon_HNB_template.noText::before, .textIcon_HNB_template:empty::before,
+.textIcon_HNB_template_left.noText::before, .textIcon_HNB_template_left:empty::before,
+.textIcon_HNB_template_right.noText::before, .textIcon_HNB_template_right:empty::before {
+  display: inline-block;
+  content: 'Bug fix!';
+  width: 0;
+  height: 0;
+  color: rgba(255, 255, 255, 0);
+  overflow: hidden;
+}
+
 .textIcon_yes, .textIcon_yes_left, .textIcon_yes_right {
   background-repeat: no-repeat;
   background-size: calc(21px + 1px) 21px;
@@ -1033,6 +1095,7 @@ TODO:        >> Generator
 
 .textIcon_yes, .textIcon_yes_left {
   background-image: url("../../images/icons/textIcon_yes.svg");
+  background-position-y: 0px;
   padding-left: calc(21px + 1px + 0px + 4px);
 }
 
@@ -1042,7 +1105,7 @@ TODO:        >> Generator
 
 .textIcon_yes_right {
   background-image: url("../../images/icons/textIcon_yes.svg");
-  background-position: 100% 0;
+  background-position: 100% 0px;
   padding-right: calc(21px + 1px + 0px + 4px);
 }
 
@@ -1080,6 +1143,7 @@ TODO:        >> Generator
 
 .textIcon_no, .textIcon_no_left {
   background-image: url("../../images/icons/textIcon_no.svg");
+  background-position-y: 0px;
   padding-left: calc(21px + 0px + 0px + 4px);
 }
 
@@ -1089,7 +1153,7 @@ TODO:        >> Generator
 
 .textIcon_no_right {
   background-image: url("../../images/icons/textIcon_no.svg");
-  background-position: 100% 0;
+  background-position: 100% 0px;
   padding-right: calc(21px + 0px + 0px + 4px);
 }
 
@@ -1127,6 +1191,7 @@ TODO:        >> Generator
 
 .textIcon_image, .textIcon_image_left {
   background-image: url("../../images/icons/textIcon_image.svg");
+  background-position-y: 0px;
   padding-left: calc(21px + 0px + 20px + 4px);
 }
 
@@ -1136,7 +1201,7 @@ TODO:        >> Generator
 
 .textIcon_image_right {
   background-image: url("../../images/icons/textIcon_image.svg");
-  background-position: 100% 0;
+  background-position: 100% 0px;
   padding-right: calc(21px + 0px + 20px + 4px);
 }
 
@@ -1174,6 +1239,7 @@ TODO:        >> Generator
 
 .textIcon_table, .textIcon_table_left {
   background-image: url("../../images/icons/textIcon_table.svg");
+  background-position-y: 0px;
   padding-left: calc(21px + 0px + 0px + 4px);
 }
 
@@ -1183,7 +1249,7 @@ TODO:        >> Generator
 
 .textIcon_table_right {
   background-image: url("../../images/icons/textIcon_table.svg");
-  background-position: 100% 0;
+  background-position: 100% 0px;
   padding-right: calc(21px + 0px + 0px + 4px);
 }
 
